<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.upload.UploadStoryActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_preview"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@id/button_gallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_place_holder" />

        <Button
            android:id="@+id/button_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/iv_preview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_camera"
            app:layout_constraintBottom_toTopOf="@id/text_input_layout"/>

        <Button
            android:id="@+id/button_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/camera"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/button_gallery"
            app:layout_constraintTop_toTopOf="@id/button_gallery"
            app:layout_constraintBottom_toBottomOf="@id/button_gallery"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            app:layout_constraintTop_toBottomOf="@id/button_gallery"
            app:layout_constraintStart_toStartOf="@id/button_gallery"
            app:layout_constraintEnd_toEndOf="@id/button_camera"
            app:layout_constraintBottom_toTopOf="@id/add_location"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="9"
                android:minLines="9"
                android:gravity="top|start"
                android:inputType="textMultiLine"/>

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/add_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_location"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/button_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/upload"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/text_input_layout"
            app:layout_constraintStart_toStartOf="@id/text_input_layout"
            app:layout_constraintTop_toBottomOf="@id/add_location" />

        <TextView
            android:id="@+id/lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/button_upload"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/lon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/lat"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/loadingProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/button_gallery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/dimBackgroundView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>